--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <section id="app">
       <h2>How Vue Works</h2>
       <input type="text" ref="userText">
-      <button @click="setText">Set Text</button>
+      <button>Set Text</button>
       <p>{{ message }}</p>
     </section>
     <section id="app2">
-      <!-- DOES NOT WORK: <p>{{ message }}</p> -->
+      
       
     </section>
   </body>
