--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="app">
       <h2>How Vue Works</h2>
       <input type="text" ref="userText">
-      <button>Set Text</button>
+      <button @click="setText">Set Text</button>
       <p>{{ message }}</p>
     </section>
     <section id="app2">
